crates/mir/tests/fixtures/errors/move_param_consumes_arg.fe
fn take(move x: u256) {
    ()
}

pub fn move_param_consumes_arg() {
    let mut x: u256 = 0
    take(move x)
    let y: u256 = x
}
